--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
-    "next": "15.2.4",
-    "postcss": "^8.5.6",
+    "next": "15.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.17"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/node": "24.0.15",
     "@types/react": "19.1.8",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
+    "postcss": "^8.5.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.3"
   }
 }
