--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
-    "@types/node": "24.0.15",
-    "@types/react": "19.1.8",
+    "@types/node": "^24.0.15",
+    "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "postcss": "^8.5.6",
